--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 </head>
 <body>
     <header>
-        <img src="marathon_header_resized.jpg" alt="London Marathon Runners Start Line">
-        <h1>Fueled by Focus (and Chaos)</h1>
+                <h1 style="margin-top: 2rem;">Fueled by Focus (and Chaos)</h1>
         <p>Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
         <div class="links">
             <a href="https://www.tcslondonmarathon.com/" target="_blank" rel="noopener">London Marathon</a> |
