--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             text-align: center;
         }
         header {
+            padding-top: 2rem;
+            padding-bottom: 2rem;
             background: #0066cc;
             color: white;
             padding: 0;
@@ -86,6 +88,8 @@
             margin: 2rem 0;
         }
         footer {
+            padding-top: 2rem;
+            padding-bottom: 2rem;
             background: #002d5a;
             color: #eee;
             padding: 1rem;
