--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             font-size: 2.3rem;
         }
         .links {
+            padding-top: 1rem;
+            padding-bottom: 2rem;
             margin: 1rem;
             font-size: 1rem;
         }
@@ -99,8 +101,8 @@
 </head>
 <body>
     <header>
-                <h1 style="margin-top: 2rem;">Fueled by Focus (and Chaos)</h1>
-        <p>Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
+                <h1 style="margin-top: 3rem; margin-bottom: 1rem;">Fueled by Focus (and Chaos)</h1>
+        <p style="margin-top: 0; margin-bottom: 2rem;">Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
         <div class="links">
             <a href="https://www.tcslondonmarathon.com/" target="_blank" rel="noopener">London Marathon</a> |
             <a href="https://www.autistica.org.uk" target="_blank" rel="noopener">Autistica</a> |
