--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             text-align: center;
         }
         header {
-            padding-top: 2rem;
-            padding-bottom: 2rem;
+            padding: 3rem 1rem;
             background: #0066cc;
             color: white;
             padding: 0;
@@ -52,8 +51,8 @@
             font-size: 2.3rem;
         }
         .links {
-            padding-top: 1rem;
-            padding-bottom: 2rem;
+            padding-top: 0.5rem;
+            padding-bottom: 1rem;
             margin: 1rem;
             font-size: 1rem;
         }
@@ -101,8 +100,8 @@
 </head>
 <body>
     <header>
-                <h1 style="margin-top: 3rem; margin-bottom: 1rem;">Fueled by Focus (and Chaos)</h1>
-        <p style="margin-top: 0; margin-bottom: 2rem;">Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
+                <h1 style="margin: 0 0 1rem 0;">Fueled by Focus (and Chaos)</h1>
+        <p style="margin: 0 0 1rem 0;">Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
         <div class="links">
             <a href="https://www.tcslondonmarathon.com/" target="_blank" rel="noopener">London Marathon</a> |
             <a href="https://www.autistica.org.uk" target="_blank" rel="noopener">Autistica</a> |
