--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <style>
         body {
+            padding-left: 1rem;
+            padding-right: 1rem;
             font-family: 'Segoe UI', sans-serif;
             background: linear-gradient(to right, #00b2ff, #e6f7ff);
             color: #002d5a;
@@ -36,7 +38,8 @@
             text-align: center;
         }
         header {
-            padding: 3rem 1rem;
+            padding-top: 2rem;
+            padding-bottom: 2rem;
             background: #0066cc;
             color: white;
             padding: 0;
@@ -51,8 +54,6 @@
             font-size: 2.3rem;
         }
         .links {
-            padding-top: 0.5rem;
-            padding-bottom: 1rem;
             margin: 1rem;
             font-size: 1rem;
         }
@@ -100,20 +101,16 @@
 </head>
 <body>
     <header>
-                <h1 style="margin: 0 0 1rem 0;">Fueled by Focus (and Chaos)</h1>
-        <p style="margin: 0 0 1rem 0;">Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
-        <div class="links">
-            <a href="https://www.tcslondonmarathon.com/" target="_blank" rel="noopener">London Marathon</a> |
-            <a href="https://www.autistica.org.uk" target="_blank" rel="noopener">Autistica</a> |
-            <a href="https://www.strava.com/athletes/37517611" target="_blank" rel="noopener">My Strava</a>
-        </div>
-    </header>
+                <h1 style="margin-top: 2rem;">Fueled by Focus (and Chaos)</h1>
+        <p>Michael Holroyd Runs the London Marathon 2026 for Autistica</p>
+            </header>
 
     <div class="hero">
         <img src="fundraiser_hero_image_resized.jpg" alt="Michael with his children" style="width: 100%; border-radius: 12px;">
     </div>
 
-    <div class="story">
+    <a href="https://2026tcslondonmarathon.enthuse.com/pf/michael-holroyd" class="button" style="margin-top: 2rem;" target="_blank" rel="noopener">Donate Now</a>
+<div class="story">
         <p>In April 2026, I’ll be running the London Marathon in support of Autistica – the UK’s leading autism and neurodiversity research charity.</p>
         <p>I’m autistic and have ADHD, and I’m also a proud dad to two brilliant neurodivergent kids – my daughter is autistic and my son has ADHD. This cause is personal, and every mile I run will be for them – and for everyone who sees the world a little differently.</p>
         <a href="https://2026tcslondonmarathon.enthuse.com/pf/michael-holroyd" class="button" target="_blank" rel="noopener">Donate Now</a>
@@ -129,6 +126,7 @@
     </div>
 
     <footer>
+        <p>Contact: <a href="mailto:hello@runwithmichael.co.uk" style="color: #fff; text-decoration: underline;">hello@runwithmichael.co.uk</a></p>
         &copy; 2025 Michael Holroyd | Supporting Autistica
     </footer>
 
