--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <p>Autistic • ADHD • Dad • Every mile matters</p>
         <div id="countdown" class="countdown">Loading countdown…</div>
         <a href="https://2026tcslondonmarathon.enthuse.com/pf/michael-holroyd" class="button" target="_blank" rel="noopener">Donate Now</a>
+    <p style="margin-top: 10px;">📧 Contact: <a href="mailto:hello@runwithmichael.co.uk">hello@runwithmichael.co.uk</a></p>
     </div>
 
     <div class="content">
@@ -102,7 +103,7 @@
 
     <footer>
         © 2025 Run with Michael | Raising funds for Autistica via the TCS London Marathon<br>
-        #RunWithMichael #NeurodiversityMatters #AutisticaMarathon
+        #RunWithMichael #NeurodiversityMatters #AutisticaMarathon<br>📧 <a href="mailto:hello@runwithmichael.co.uk">hello@runwithmichael.co.uk</a>
     </footer>
 
 <!-- Default Statcounter code for run with michael
