--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <style>
         body {font-family: Arial, sans-serif;margin:0;padding:0;background:#ffffff;color:#2B50A1;}
-        header {background:#2B50A1;color:#fff;padding:40px 20px;text-align:center;}
-        .hero {background:#2B50A1;color:#fff;padding:60px 20px;text-align:center;}
-        .hero h1 {font-size:2.2em;}
+        header {background:#2B50A1;color:#fff;padding:30px 20px 20px;text-align:center;}
+        .hero {background:#2B50A1;color:#fff;padding:30px 20px 50px;text-align:center;}
+        .hero h1, header h1 {font-size:2.5em; margin-bottom: 0.3em;}
         .content {padding:40px 20px;max-width:900px;margin:auto;}
         .button {display:inline-block;background:#EF5DA8;color:#fff;padding:15px 30px;font-size:1.2em;text-decoration:none;border-radius:8px;margin:20px 0;}
         .logos {display:flex;justify-content:center;gap:20px;margin:30px 0;}
@@ -70,7 +70,7 @@
         <p>Autistic • ADHD • Dad • Every mile matters</p>
         <div id="countdown" class="countdown">Loading countdown…</div>
         <a href="https://2026tcslondonmarathon.enthuse.com/pf/michael-holroyd" class="button" target="_blank" rel="noopener">Donate Now</a>
-    <p style="margin-top: 10px;">📧 Contact: <a href="mailto:hello@runwithmichael.co.uk">hello@runwithmichael.co.uk</a></p>
+    <p style="margin-top: 10px; color: white;">📧 Contact: <a href="mailto:hello@runwithmichael.co.uk" style="color: white; text-decoration: underline;">hello@runwithmichael.co.uk</a></p>
     </div>
 
     <div class="content">
